# GSAP

./: .gitmodules  CMakeLists.txt  GSAP.cu  README.md  main.cu
Dataset/static/highOverlap_highBlockSizeVar/1k/: 1000_nodes.tsv  1000_nodes_truePartition.tsv
Dataset/static/highOverlap_highBlockSizeVar/200k/: 200000_nodes_truePartition.tsv
Dataset/static/highOverlap_highBlockSizeVar/20k/: 20000_nodes_truePartition.tsv
Dataset/static/highOverlap_highBlockSizeVar/50k/: 50000_nodes_truePartition.tsv
Dataset/static/highOverlap_highBlockSizeVar/5k/: 5000_nodes.tsv  5000_nodes_truePartition.tsv
Dataset/static/highOverlap_lowBlockSizeVar/1k/: 1000_nodes.tsv  1000_nodes_truePartition.tsv
Dataset/static/highOverlap_lowBlockSizeVar/200k/: 200000_nodes_truePartition.tsv
Dataset/static/highOverlap_lowBlockSizeVar/20k/: 20000_nodes_truePartition.tsv
Dataset/static/highOverlap_lowBlockSizeVar/50k/: 50000_nodes_truePartition.tsv
Dataset/static/highOverlap_lowBlockSizeVar/5k/: 5000_nodes.tsv
Dataset/static/lowOverlap_highBlockSizeVar/1k/: 1000_nodes.tsv  1000_nodes_truePartition.tsv
Dataset/static/lowOverlap_highBlockSizeVar/200k/: 200000_nodes_truePartition.tsv
Dataset/static/lowOverlap_highBlockSizeVar/20k/: 20000_nodes_truePartition.tsv
Dataset/static/lowOverlap_highBlockSizeVar/50k/: 50000_nodes_truePartition.tsv
Dataset/static/lowOverlap_highBlockSizeVar/5k/: 5000_nodes.tsv  5000_nodes_truePartition.tsv
Dataset/static/lowOverlap_lowBlockSizeVar/1k/: 1000_nodes.tsv
Dataset/static/lowOverlap_lowBlockSizeVar/200k/: 200000_nodes_truePartition.tsv
GSAP/: allocate_device.hpp  graph.hpp  load.hpp  partition.hpp
GSAP/evaluate/: eval.hpp  evaluate.hpp
include/: eval.hpp  kernels.hpp  load.hpp  partition.hpp
include/src/: evaluate.hpp
